@@ -1,3 +1,8 @@
+2009-04-29  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tcl.h (Tcl_StatBuf): [Bug 2651823]: Improved logic for
+	detecting what base API to use on Win64, supplied by Fausto Lubatti.
+
 2009-04-28  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/tcl.m4, unix/configure (SC_CONFIG_CFLAGS): harden the check
